# revery-quick-start

./: .gitignore  App.re  LICENSE  Minimal.re  README.md  ThirdPartyLicenses.txt  azure-pipelines.yml  dune  esy-build-steps.yml  esy.lock.json  js.json  package.json  stubs.js
.ci/: azure-pipelines.yml  esy-build-steps.yml
.circleci/: config.yml
assets/: dune
assets_js/: dune  index.html
esy.lock/: index.json
esy.lock/overrides/opam__s__ocaml_secondary_compiler_opam__c__4.08.1_1_opam_override/: package.json
js.esy.lock/: index.json
src/: AnimatedText.re  App.re  SimpleButton.re  Theme.re  dune
